<resources>
    <string name="app_name">Mobilefinal</string>
    <string name="action_settings">Settings</string>3
    <string name="action_new">New</string>
    <string name="action_salvar">Save</string>
    <string name="id">ID</string>
    <string name="nota">Note</string>
    <string name="precurso">Intended Course</string>
    <string name="excluir">Delete</string>
    <string name="altera">Change</string>
    <string name="editid" />
    <string name="editnota" />
    <string name="editcurso" />
    <string name="title_activity_settings">Settings</string>
    <string name="nome_settings" />
    <string name="nomesettings">Gabriel Guimaraes Pereira</string>
    <string name="RA">Indentification Number : 1705180</string>
    <string name="curso_settings">Analysis and systems development</string>
    <string name="nenhumcli">No Note</string>
    <string name="deletar">Delete</string>
    <string name="perguntadelete">Do you want to exclude even delete</string>
    <string name="Cancelar">Cancel</string>
    <string name="delete">Delete</string>
    <string name="excluido">contact excluded</string>
    <string name="campolimp">Clean fields</string>
    <string name="obrigatorio">Required field</string>
    <string name="title_activity_inicial">Initial</string>
    <string name="abremain">insert note</string>
    <string name="desistir">dont delete</string>
</resources>
