<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ggp.mobilefinal.MainActivity">
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/action_new" />
    <item
        android:id="@+id/action_salvar"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/action_salvar" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
